--- a/src/VaccineWeb.Preview/Views/Orders/List.cshtml
+++ b/src/VaccineWeb.Preview/Views/Orders/List.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AggregateRootId }) |
+            @Html.ActionLink("Edit", "Edit", new { id=item.AggregateRootId, rowId = item.RowId, customerId = item.CustomerId, productId = item.ProductId }) |
             @Html.ActionLink("Details", "Details", new { id=item.AggregateRootId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.AggregateRootId})
         </td>
